versions/v2.9/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/http-proxy.adoc
= Installing {rancher-product-name} behind an HTTP Proxy
:page-languages: [en, zh]
:revdate: 2024-09-30
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/index.adoc 
:product-path: installation-and-upgrade/other-installation-methods/http-proxy/http-proxy.adoc
ifeval::["{build-type}" != "community"]
:xref-air-gap: xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
:xref-http-proxy-install-k8s: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-air-gap: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc
:xref-http-proxy-install-k8s: xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-kubernetes.adoc
endif::[]

In a lot of enterprise environments, servers or VMs running on premise do not have direct Internet access, but must connect to external services through a HTTP(S) proxy for security reasons. This tutorial shows step by step how to set up a highly available Rancher installation in such an environment.

Alternatively, it is also possible to set up Rancher completely air-gapped without any Internet access. This process is described in detail in the {xref-air-gap}[Rancher docs].

== Installation Outline

. xref:installation-and-upgrade/other-installation-methods/http-proxy/set-up-infrastructure.adoc[Set up infrastructure]
. {xref-http-proxy-install-k8s}[Set up a Kubernetes cluster]
. xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc[Install Rancher]
