versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/http-proxy.adoc
= Installing {rancher-product-name} behind an HTTP Proxy
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/index.adoc 
:page-product-path: installation-and-upgrade/other-installation-methods/http-proxy/http-proxy.adoc
ifeval::["{build-type}" != "community"]
:xref-air-gap: xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
:xref-http-proxy-install-k8s: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
:xref-http-proxy-setup-infra: xref:installation-and-upgrade/other-installation-methods/http-proxy/set-up-infrastructure.adoc
:xref-http-proxy-setup-install-rancher: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-air-gap: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc
:xref-http-proxy-install-k8s: xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-kubernetes.adoc
:xref-http-proxy-setup-infra: xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/set-up-infrastructure.adoc
:xref-http-proxy-setup-install-rancher: xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher.adoc
endif::[]

In a lot of enterprise environments, servers or VMs running on premise do not have direct Internet access, but must connect to external services through a HTTP(S) proxy for security reasons. This tutorial shows step by step how to set up a highly available Rancher installation in such an environment.

Alternatively, it is also possible to set up Rancher completely air-gapped without any Internet access. This process is described in detail in the {xref-air-gap}[Rancher docs].

== Installation Outline

. {xref-http-proxy-setup-infra}[Set up infrastructure]
. {xref-http-proxy-install-k8s}[Set up a Kubernetes cluster]
. {xref-http-proxy-setup-install-rancher}[Install Rancher]
